footer removed and css changes

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -576,7 +576,7 @@ footer{
 }
 
 /* ----- MEDIA QUERY == 900px / RESPONSIVE ----- */
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 600px) {
     .nav-button{
         display: none;
     }
@@ -674,6 +674,16 @@ footer{
         width: 80%;
     }
 
+    .about-info{
+    padding-block: 30px;
+    }
+    .about-btn button {
+        position: unset;
+    }
+    .download-btn {
+        margin-right: 0rem;
+    }
+
 }
 
 .download-btn {
@@ -695,4 +705,14 @@ footer{
     .input-field{
         width: 100%;
     }
+
+    .about-info{
+        padding-block: 30px;
+        }
+        .about-btn button {
+            position: unset;
+        }
+        .download-btn {
+            margin: 0rem;
+        }
 }
